overflow fix

--- a/nick_tests_jq/css/admin_style_white.css
+++ b/nick_tests_jq/css/admin_style_white.css
@@ -14,6 +14,7 @@
 		html {
 			width: 100%;
 			height: 100%;
+			overflow-y: scroll;
 			/*overflow:  hidden;*/ 
 }
 		::-webkit-scrollbar:not (#draw-block) {
